# brasstacks-memory

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/brasstacks/memory/: BlockHeader.hpp  Heap.hpp  new_and_delete.hpp  pch.hpp
src/: CMakeLists.txt  Heap.cpp  new_and_delete.cpp  version.hpp.in
test/: CMakeLists.txt  test01_single_block.cpp  test03_three_blocks.cpp  test04_four_blocks.cpp
tests/: CMakeLists.txt  test00_benchmark.cpp  test00_stats.cpp  test01_stats.cpp  test02_single_block.cpp  test02_two_blocks.cpp  test03_two_blocks.cpp  test04_three_blocks.cpp  test05_five_blocks.cpp  test05_four_blocks.cpp  test99_benchmark.cpp  test_helpers.hpp  tests.cpp  tests01_stats.cpp  tests02_single_block.cpp  tests03_two_blocks.cpp  tests04_three_blocks.cpp  tests05_five_blocks.cpp
